--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "node_modules/.bin/eslint ./lib ./example",
-    "lint:fix": "node_modules/.bin/eslint --fix ./lib ./example"
+    "lint": "node_modules/.bin/eslint bot",
+    "lint:fix": "node_modules/.bin/eslint --fix bot"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "form-data": "^2.5.0",
-    "socket.io": "^2.4.0"
+    "socket.io": "^2.4.0",
+    "roschat-bot-js-sdk": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^5.6.0",
